try to do small flex object, bootstrap already connected

--- a/ulwex.html
+++ b/ulwex.html
@@ -20,8 +20,8 @@
 				<div class="lights">
 						<div class="name">ФАРЫ ДЛЯ HYUNDAI SOLARIS 2011-2015</div>
 						<div class="menu">
-							<a href="" class="menuhref"><div class="item">СПИСОК ФАР</div></a>
-							<a href="" class="menuhref"><div class="item">ПОДОЙДЕТ ЛИ МНЕ ФАРА?</div></a>
+							<a href="" ><div class="item">СПИСОК ФАР</div></a>
+							<a href="" "><div class="item">ПОДОЙДЕТ ЛИ МНЕ ФАРА?</div></a>
 							<a href="" class="menuhref"><div class="item">СОПУТСТВУЮЩИЕ ТОВАРЫ</div></a>
 							<a href="" class="menuhref"><div class="item">ПОСЛЕДНИЕ НОВОСТИ</div></a>
 						</div>
@@ -47,7 +47,21 @@
 					</div>
 			</div>
 			
+		<div class="row">
 
+			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+				<img src="pic/4dc7cc2d7b59b35a6b8f7916ee0fcba3.jpg" alt="">
+			</div>
+
+			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+				<img src="pic/4dc7cc2d7b59b35a6b8f7916ee0fcba3.jpg" alt="">
+			</div>
+			
+			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+				<img src="pic/4dc7cc2d7b59b35a6b8f7916ee0fcba3.jpg" alt="">
+			</div>	
+
+		</div> 
 
 
 
