element structure created, fonts are not done

--- a/ulwex.html
+++ b/ulwex.html
@@ -46,18 +46,48 @@
 						</p>
 					</div>
 			</div>
-			
+
+		<div class="shop-el-cont1">
+			<div class="container">
+				<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+					<div class="el-box">
+						<div class="el-up-button">
+							ПОДРОБНОСТИ >
+						</div>
+						<img src="pic/4dc7cc2d7b59b35a6b8f7916ee0fcba3.jpg" alt="404">
+						<div class="el-desc">Фара противотуманная левая+правая (комплект) тюнинг с проводкой, с диодами(Китай) </div>
+
+						<div class="price">
+							<h6>2000 руб.</h6>
+							<h5>ДОБАВИТЬ В КОРЗИНУ</h5>
+						</div>
+
+					</div>			
+				</div>		
+			</div>
+
+
+
+			<div class="number-element-button">
+				
+			</div>
+
+
+		</div>
+
+
+
 		<div class="row">
 
-			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
 				<img src="pic/4dc7cc2d7b59b35a6b8f7916ee0fcba3.jpg" alt="">
 			</div>
 
-			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
 				<img src="pic/4dc7cc2d7b59b35a6b8f7916ee0fcba3.jpg" alt="">
 			</div>
 			
-			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-3">
+			<div class="col-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
 				<img src="pic/4dc7cc2d7b59b35a6b8f7916ee0fcba3.jpg" alt="">
 			</div>	
 
